--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
   "require": {
     "php": "^8.3",
     "ext-mongodb": "*",
-    "mongodb/mongodb": "^2.0"
+    "mongodb/mongodb": "^2.0",
+    "slim/slim": "^4.15",
+    "slim/psr7": "^1.8"
   },
   "autoload": {
     "psr-4": {
