--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "ext-mongodb": "*",
     "mongodb/mongodb": "^2.0",
     "slim/slim": "^4.15",
-    "slim/psr7": "^1.8"
+    "slim/psr7": "^1.8",
+    "google-gemini-php/client": "^2.7",
+    "php-http/guzzle7-adapter": "^1.1"
   },
   "autoload": {
     "psr-4": {
@@ -17,5 +19,10 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.5"
+  },
+  "config": {
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   }
 }
