--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "slim/slim": "^4.15",
     "slim/psr7": "^1.8",
     "google-gemini-php/client": "^2.7",
-    "php-http/guzzle7-adapter": "^1.1"
+    "php-http/guzzle7-adapter": "^1.1",
+    "symfony/console": "^7.4"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Cli\\": "cli/"
     }
   },
   "require-dev": {
