--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,12 @@
     "slim/psr7": "^1.8",
     "google-gemini-php/client": "^2.7",
     "php-http/guzzle7-adapter": "^1.1",
-    "symfony/console": "^7.4"
+    "symfony/console": "^7.4",
+    "symfony/dom-crawler": "^7.4",
+    "symfony/css-selector": "^7.4",
+    "vlucas/phpdotenv": "^5.6",
+    "fivefilters/readability.php": "^3.3",
+    "league/html-to-markdown": "^5.1"
   },
   "autoload": {
     "psr-4": {
