--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "symfony/css-selector": "^7.4",
     "vlucas/phpdotenv": "^5.6",
     "fivefilters/readability.php": "^3.3",
-    "league/html-to-markdown": "^5.1"
+    "league/html-to-markdown": "^5.1",
+    "ramsey/uuid": "^4.9"
   },
   "autoload": {
     "psr-4": {
