--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "vlucas/phpdotenv": "^5.6",
     "fivefilters/readability.php": "^3.3",
     "league/html-to-markdown": "^5.1",
-    "ramsey/uuid": "^4.9"
+    "ramsey/uuid": "^4.9",
+    "symfony/yaml": "^7.4"
   },
   "autoload": {
     "psr-4": {
